--- a/package.json
+++ b/package.json
@@ -5,18 +5,32 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "10.4.15",
+    "chart.js": "^4.4.0",
+    "leaflet": "^1.9.4",
+    "next": "14.2.17",
+    "next-themes": "^0.2.1",
+    "postcss": "8.4.29",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "next": "14.2.17"
+    "react-icons": "^4.11.0",
+    "react-leaflet": "^4.2.1",
+    "sass": "^1.67.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "3.3.3",
+    "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
     "eslint": "^8",
-    "eslint-config-next": "14.2.17"
+    "eslint-config-next": "14.2.17",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
